[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/fonts/title_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/CustomGameUIScript.gd" type="Script" id=7]
[ext_resource path="res://scenes/MenuBackground.tscn" type="PackedScene" id=9]

[node name="CustomGameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="TileMap" parent="." instance=ExtResource( 9 )]
theme = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.5
margin_top = -162.5
margin_right = 220.5
margin_bottom = 162.5
theme = ExtResource( 1 )
script = ExtResource( 7 )

[node name="BackButton" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 11.0
margin_top = 91.0
margin_right = 69.0
margin_bottom = 117.0
theme = ExtResource( 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = 91.0
margin_right = -15.0
margin_bottom = 117.0
theme = ExtResource( 1 )
text = "Play"

[node name="MenuTitle" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -188.0
margin_top = -128.0
margin_right = 188.0
margin_bottom = -64.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "Custom Game"

[node name="TurnLimitLabel" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -173.5
margin_top = -25.0
margin_right = -66.5
margin_bottom = -7.0
rect_pivot_offset = Vector2( 118.981, 27.5106 )
theme = ExtResource( 1 )
text = "Turn Limit:"
align = 2

[node name="TurnLimitUnitsLabel" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 71.5
margin_top = -25.0
margin_right = 184.5
margin_bottom = -7.0
rect_pivot_offset = Vector2( 118.981, 27.5106 )
theme = ExtResource( 1 )
text = "turns"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapSizeUnitsLabel" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 71.5
margin_top = 23.0
margin_right = 184.5
margin_bottom = 41.0
rect_pivot_offset = Vector2( 118.981, 27.5106 )
theme = ExtResource( 1 )
text = "tiles"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapSizeLabel" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -167.0
margin_top = 23.0
margin_right = -73.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( 59.6399, 9 )
theme = ExtResource( 1 )
text = "Map Size:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnLimitInput" type="LineEdit" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.0
margin_top = -29.0
margin_right = 52.0
margin_bottom = -3.0
theme = ExtResource( 1 )
max_length = 3
context_menu_enabled = false
placeholder_text = "Unlimited"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameSizeInput" type="LineEdit" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.0
margin_top = 19.0
margin_right = 52.0
margin_bottom = 45.0
theme = ExtResource( 1 )
text = "64"
max_length = 3
context_menu_enabled = false
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Panel/BackButton" to="Panel" method="_on_BackToChooseModeButton_pressed"]
[connection signal="pressed" from="Panel/PlayButton" to="Panel" method="_on_PlayButton_pressed"]
[connection signal="text_changed" from="Panel/TurnLimitInput" to="Panel" method="_on_TurnLimitInput_text_changed"]
[connection signal="text_changed" from="Panel/GameSizeInput" to="Panel" method="_on_MapSizeInput_text_changed"]
